details: Don't expand CPU model dropdown

--- a/src/vmm-details.ui
+++ b/src/vmm-details.ui
@@ -2356,9 +2356,8 @@ I/O:</property>
                                                         </child>
                                                       </object>
                                                       <packing>
-                                                        <property name="expand">True</property>
-                                                        <property name="fill">True</property>
-                                                        <property name="pack_type">end</property>
+                                                        <property name="expand">False</property>
+                                                        <property name="fill">False</property>
                                                         <property name="position">1</property>
                                                       </packing>
                                                     </child>
