--- a/src/vmm-details.ui
+++ b/src/vmm-details.ui
@@ -110,6 +110,11 @@
     <property name="can_focus">False</property>
     <property name="stock">gtk-missing-image</property>
   </object>
+  <object class="GtkImage" id="image178">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
   <object class="GtkWindow" id="vmm-details">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Virtual Machine</property>
@@ -248,6 +253,18 @@
                                 <property name="image">image5</property>
                                 <property name="use_stock">False</property>
                                 <signal name="activate" handler="on_details_menu_poweroff_activate" swapped="no"/>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkImageMenuItem" id="details-menu-reset">
+                                <property name="label" translatable="yes">F_orce Reset</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="use_action_appearance">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="image">image178</property>
+                                <property name="use_stock">False</property>
+                                <signal name="activate" handler="on_details_menu_reset_activate" swapped="no"/>
                               </object>
                             </child>
                             <child>
