Shorten iotune names for simplicity
And refactor some of the virt-manager code for the same goal.

--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -4343,7 +4343,7 @@ I/O:</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkSpinButton" id="disk-iotune-read-bytes-sec">
+                                                            <object class="GtkSpinButton" id="disk-iotune-rbs">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
@@ -4363,7 +4363,7 @@ I/O:</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkSpinButton" id="disk-iotune-read-iops-sec">
+                                                            <object class="GtkSpinButton" id="disk-iotune-ris">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
@@ -4383,7 +4383,7 @@ I/O:</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkSpinButton" id="disk-iotune-write-bytes-sec">
+                                                            <object class="GtkSpinButton" id="disk-iotune-wbs">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
@@ -4403,7 +4403,7 @@ I/O:</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkSpinButton" id="disk-iotune-write-iops-sec">
+                                                            <object class="GtkSpinButton" id="disk-iotune-wis">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
@@ -4423,7 +4423,7 @@ I/O:</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkSpinButton" id="disk-iotune-total-bytes-sec">
+                                                            <object class="GtkSpinButton" id="disk-iotune-tbs">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
@@ -4443,7 +4443,7 @@ I/O:</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkSpinButton" id="disk-iotune-total-iops-sec">
+                                                            <object class="GtkSpinButton" id="disk-iotune-tis">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
