console: s/console-vnc/console-gfx/g
Just for clarity

--- a/ui/vmm-details.ui
+++ b/ui/vmm-details.ui
@@ -850,11 +850,11 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkScrolledWindow" id="console-vnc-scroll">
+                  <object class="GtkScrolledWindow" id="console-gfx-scroll">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <child>
-                      <object class="GtkViewport" id="console-vnc-viewport">
+                      <object class="GtkViewport" id="console-gfx-viewport">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="resize_mode">queue</property>
